# corrosiff-python

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  corrosiffpy.pyi  pyproject.toml  tox.ini
.github/workflows/: build_wheels.yml  maturin-CI.yaml
compatibility_tests/: test_read_flim.py  test_read_frames.py
docs/source/: index.rst  installation.rst
src/: lib.rs  siffio.rs
tests/: conftest.py  test_metadata.py  test_read_flim.py  test_read_frames.py
